hover/active works, slight spacing bug

--- a/src/app/components/technology/tools/tools.component.css
+++ b/src/app/components/technology/tools/tools.component.css
@@ -6,6 +6,11 @@ li {
 a {
     text-decoration: none;
 }
+
+.nav-bubbles:hover {
+    border-width: 3px;
+    position: relative;
+}
 @media (max-width: 420px) {
     #desktop {
         display: none;
@@ -110,12 +115,24 @@ a {
         gap: 32px;
         margin-top: 35px;
         order: 1;
+
     }
     .nav-bubbles {
         width: 80px;
         height: 80px;
         border-radius: 50px;
         border: #ffffff 1px solid;
+        position: static;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-content: center;
+    }
+    .active {
+        filter: invert();
+        background-color: black;
+        border-radius: 80px;
+        height: 80px;
         display: flex;
         flex-direction: column;
         justify-content: center;
